EXTRA_DIST = \
	argc \
	adb \
	bombadil \
	cal \
	cargo \
	chfn \
	chsh \
	coder \
	delta \
	dmesg \
	eject \
	flamegraph \
	gaiacli \
	gh \
	golangci-lint \
	gsctl \
	hexdump \
	hwclock \
	insmod \
	ionice \
	jj \
	jungle \
	keyring \
	kontena \
	look \
	mdbook \
	mock \
	modinfo \
	modules \
	modprobe \
	mount \
	mount.linux \
	mtr \
	newgrp \
	nmcli \
	nox \
	nvm \
	pip \
	pipenv \
	renice \
	repomanage \
	reptyr \
	rmmod \
	rfkill \
	rtcwake \
	ruff \
	runuser \
	rustup \
	secret-tool \
	slackpkg \
	sops \
	stern \
	stripe \
	su \
	svn \
	svnadmin \
	svnlook \
	task \
	tokio-console \
	udevadm \
	umount \
	umount.linux \
	uvx \
	vault \
	wasmer \
	write \
	xm \
	yq \
	yum
