EXTRA_DIST = \
	argc.bash \
	adb.bash \
	bombadil.bash \
	cal.bash \
	cargo.bash \
	chfn.bash \
	chsh.bash \
	coder.bash \
	delta.bash \
	dmesg.bash \
	eject.bash \
	flamegraph.bash \
	gaiacli.bash \
	gh.bash \
	golangci-lint.bash \
	gsctl.bash \
	hexdump.bash \
	hwclock.bash \
	insmod.bash \
	ionice.bash \
	jj.bash \
	jungle.bash \
	keyring.bash \
	kontena.bash \
	look.bash \
	mdbook.bash \
	mock.bash \
	modinfo.bash \
	modules.bash \
	modprobe.bash \
	mount.bash \
	mount.linux.bash \
	mtr.bash \
	newgrp.bash \
	nmcli.bash \
	nox.bash \
	nvm.bash \
	pip.bash \
	pipenv.bash \
	renice.bash \
	repomanage.bash \
	reptyr.bash \
	rmmod.bash \
	rfkill.bash \
	rtcwake.bash \
	ruff.bash \
	runuser.bash \
	rustup.bash \
	secret-tool.bash \
	slackpkg.bash \
	sops.bash \
	stern.bash \
	stripe.bash \
	su.bash \
	svn.bash \
	svnadmin.bash \
	svnlook.bash \
	task.bash \
	tokio-console.bash \
	udevadm.bash \
	umount.bash \
	umount.linux.bash \
	uvx.bash \
	vault.bash \
	wasmer.bash \
	write.bash \
	xm.bash \
	yq.bash \
	yum.bash
