EXTRA_DIST = \
	test_unit_count_args.py \
	test_unit_expand.py \
	test_unit_expand_tilde_by_ref.py \
	test_unit_filedir.py \
	test_unit_find_unique_completion_pair.py \
	test_unit_get_comp_words_by_ref.py \
	test_unit_get_cword.py \
	test_unit_init_completion.py \
	test_unit_ip_addresses.py \
	test_unit_known_hosts_real.py \
	test_unit_longopt.py \
	test_unit_parse_help.py \
	test_unit_parse_usage.py \
	test_unit_quote.py \
	test_unit_quote_readline.py \
	test_unit_tilde.py \
	test_unit_variables.py \
	test_unit_xinetd_services.py

all:

clean-local:
	$(RM) -R __pycache__
